// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionPanel Panel basic behavior exists and renders with mock props 1`] = `
<div>
  <div
    aria-controls="panel-firstsection"
    aria-expanded={false}
    aria-selected={false}
    className="accordionPanel-label display--block span--100"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="tab"
    tabIndex={0}
  >
    <Flex
      className="padding--bottom padding--top accordionPanel"
      rowReverse={false}
      tabIndex={-1}
    >
      <FlexItem
        id="label-firstsection"
      >
        First Section
      </FlexItem>
      <FlexItem
        className="accordionPanel-icon"
        onClick={[Function]}
        shrink={true}
      >
        <Icon
          className="indicator"
          shape="chevron-down"
          size="xs"
        />
      </FlexItem>
    </Flex>
  </div>
  <Chunk
    aria-hidden={true}
    aria-labelledby="label-firstsection"
    className="accordionPanel-animator accordionPanel-animator--collapse"
    id="panel-firstsection"
    onTransitionEnd={[Function]}
    role="tabpanel"
    style={
      Object {
        "height": "0px",
      }
    }
  >
    <div
      className="accordionPanel-content"
    >
      <div
        className="runningText"
      >
        <p>
          Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
        </p>
      </div>
    </div>
  </Chunk>
</div>
`;

exports[`AccordionPanel Panel with custom icon exists and renders a custom icon 1`] = `
<div>
  <div
    aria-controls="panel-firstsection"
    aria-expanded={false}
    aria-selected={false}
    className="accordionPanel-label display--block span--100"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="tab"
    tabIndex={0}
  >
    <Flex
      className="padding--bottom padding--top accordionPanel"
      rowReverse="all"
      tabIndex={-1}
    >
      <FlexItem
        id="label-firstsection"
      >
        First Section
      </FlexItem>
      <FlexItem
        className="accordionPanel-icon"
        onClick={[Function]}
        shrink={true}
      >
        <Icon
          className="indicator"
          shape="plus"
          size="xs"
        />
      </FlexItem>
    </Flex>
  </div>
  <Chunk
    aria-hidden={true}
    aria-labelledby="label-firstsection"
    className="accordionPanel-animator accordionPanel-animator--collapse"
    id="panel-firstsection"
    onTransitionEnd={[Function]}
    role="tabpanel"
    style={
      Object {
        "height": "0px",
      }
    }
  >
    <div
      className="accordionPanel-content"
    >
      <div
        className="runningText"
      >
        <p>
          Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
        </p>
      </div>
    </div>
  </Chunk>
</div>
`;

exports[`AccordionPanel Panel with right aligned icon exists and renders icon left 1`] = `undefined`;

exports[`AccordionPanel Panel with toggle switch exists and renders a toggle switch 1`] = `undefined`;
